--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -18,5 +18,6 @@ jobs:
         - run: npm ci        # A key command to ensure consistent and reliable builds in CI/CD by relying on strictly defined package versions, thereby improving the quality and predictability of deployments.
         - run: npm run build --if-present
         - run: npm run lint
+        - run: npm run test
         # - run: npm test   # if we have a file test in the code
 
